<resources>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
  <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_font_family_body_1_material">sans-serif</string>
  <string name="abc_font_family_body_2_material">sans-serif-medium</string>
  <string name="abc_font_family_button_material">sans-serif-medium</string>
  <string name="abc_font_family_caption_material">sans-serif</string>
  <string name="abc_font_family_display_1_material">sans-serif</string>
  <string name="abc_font_family_display_2_material">sans-serif</string>
  <string name="abc_font_family_display_3_material">sans-serif</string>
  <string name="abc_font_family_display_4_material">sans-serif-light</string>
  <string name="abc_font_family_headline_material">sans-serif</string>
  <string name="abc_font_family_menu_material">sans-serif</string>
  <string name="abc_font_family_subhead_material">sans-serif</string>
  <string name="abc_font_family_title_material">sans-serif-medium</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="accessibility_date_picker_month">Month</string>
  <string name="accessibility_date_picker_week">Week</string>
  <string name="accessibility_date_picker_year">Year</string>
  <string name="accessibility_datetime_picker_date">Date</string>
  <string name="accessibility_datetime_picker_time">Time</string>
  <string name="accessibility_time_picker_ampm">AM/PM</string>
  <string name="accessibility_time_picker_hour">Hour</string>
  <string name="accessibility_time_picker_milli">Millisecond</string>
  <string name="accessibility_time_picker_minute">Minute</string>
  <string name="accessibility_time_picker_second">Second</string>
  <string name="action_bar_title_create_forum">创建帖子</string>
  <string name="action_bar_title_forum_detail">帖子详情</string>
  <string name="action_bar_title_message_center">消息</string>
  <string name="action_bar_title_my_forum">我的帖子</string>
  <string name="action_bar_title_my_forum_fav">收藏</string>
  <string name="action_bar_title_my_forum_post">发布</string>
  <string name="action_bar_title_my_forum_reply">回复</string>
  <string name="action_bar_title_my_forum_sel">精华</string>
  <string name="action_earn_more_gua_coin">赚呱币</string>
  <string name="action_post">发布</string>
  <string name="action_settings">Settings</string>
  <string name="action_share">分享</string>
  <string name="action_share_now">发送</string>
  <string name="actionbar_share">Share</string>
  <string name="actionbar_textselection_title">Text selection</string>
  <string name="actionbar_web_search">Web search</string>
  <string name="add">添加</string>
  <string name="add_baby">添加宝贝</string>
  <string name="add_baby_need_login_tips">登录才能添加宝贝哦!</string>
  <string name="add_user_need_login_tips">登录才能添加个人信息哦!</string>
  <string name="adhoc_camera_no_permission_tip">未打开相机功能,此功能无法使用.</string>
  <string name="adhoc_camera_permission_tip_message">《扫描加入试验》功能需要《相机》权限进行二维码扫描.</string>
  <string name="adhoc_client_id_empty_tips">Adhoc sdk clientId为空.</string>
  <string name="adhoc_commmon_failed">更新数据失败,请重新扫描加入试验</string>
  <string name="adhoc_common_success">更新数据成功</string>
  <string name="adhoc_dialog_loading">加载中…</string>
  <string name="adhoc_enter_experiment_tip">当前设备强制加入了试验:%s</string>
  <string name="adhoc_exit_experiment_failed">退出试验出错了.原因:%s</string>
  <string name="adhoc_exit_experiment_success">退出试验成功!</string>
  <string name="adhoc_failed_unknown">未知原因</string>
  <string name="adhoc_get_flag_tip_message">更新试验数据中…</string>
  <string name="adhoc_join_experiment_failed">加入试验出错了?%s</string>
  <string name="adhoc_joined_experiment">已经加入试验</string>
  <string name="adhoc_no_experiments">当前设备没有强制加入任何试验</string>
  <string name="adhoc_scan_result_empty">接收到的数据为空。</string>
  <string name="adhoc_tester_editor_in">进入可视化编辑</string>
  <string name="adhoc_tester_editor_out">退出可视化编辑</string>
  <string name="adhoc_tester_exit_experiment">退出试验（只能退出扫码进入的试验）</string>
  <string name="adhoc_tester_scanner">扫码加入试验</string>
  <string name="adhoc_tester_scanner_default">扫描加入默认版本</string>
  <string name="adhoc_tester_tips_1">&quot;如果需要预览试验版本，请点击扫描加入试验按钮。
扫描版本二维码,二维码位于试验中集成调试页面，请选择对应版本即可。
扫码后，本设备将保持停留在该试验版本。
如果要退出该试验版本，请点击退出试验按钮。&quot;</string>
  <string name="adhoc_tester_tips_2">&quot;不能加入试验？
检查APPKEY是否正确
检查logcat看是否有错误提示&quot;</string>
  <string name="adhoc_warning">警告</string>
  <string name="ali_pay_name">支付宝支付</string>
  <string name="all_courses">全部主修课</string>
  <string name="all_loop_tips">模式切换</string>
  <string name="all_major_courses">全部主修课</string>
  <string name="already_have_account">已有账号?</string>
  <string name="app_name">叽里呱啦-儿童英语</string>
  <string name="attention_wx">关注微信领取</string>
  <string name="audio_channel_empty">暂无内容</string>
  <string name="audio_channel_text">电台</string>
  <string name="audio_fav_channel_name">红心电台</string>
  <string name="audio_limit_time_control">睡眠定时 (剩余%1$s分钟)</string>
  <string name="audio_limit_time_control_disabled">睡眠定时</string>
  <string name="audio_limit_time_control_title">睡眠定时设置</string>
  <string name="audio_offline_channel_name">已下载</string>
  <string name="audio_pop_sharetext">快告诉大家，让更多宝贝听到这首歌！</string>
  <string name="audio_record_play">点击播放</string>
  <string name="audio_record_playing">播放中</string>
  <string name="audio_recording">录音中</string>
  <string name="audio_rnt_channel_name">最近记录</string>
  <string name="audio_search_hint">歌名、歌手、专辑、条形码</string>
  <string name="audio_video_network_state_change_notify_tips">&quot;当前网络无Wi-Fi，继续使用可能会
产生相关流量费用&quot;</string>
  <string name="autofill_keyboard_accessory_content_description">Suggestions available</string>
  <string name="autofill_popup_content_description">Showing autofill popup</string>
  <string name="baby_birthday_illegal">设置日期非法, 请重新设置</string>
  <string name="baby_info">宝贝信息</string>
  <string name="begin_refresh">即将刷新</string>
  <string name="bg_image">background image</string>
  <string name="bind_ok">完成绑定</string>
  <string name="bind_wechat_hint">请绑定微信才能保存珍贵的学习记录哦～</string>
  <string name="block_canary_block_list_title">Blocks in %s</string>
  <string name="block_canary_class_has_blocked">blocked %s ms</string>
  <string name="block_canary_delete">Delete</string>
  <string name="block_canary_delete_all">Delete all</string>
  <string name="block_canary_delete_all_dialog_content">Are you sure to delete all records?</string>
  <string name="block_canary_display_activity_label">Blocks</string>
  <string name="block_canary_no">No</string>
  <string name="block_canary_notification_message">Click for more details</string>
  <string name="block_canary_share_leak">Share info</string>
  <string name="block_canary_share_stack_dump">Share stack dump</string>
  <string name="block_canary_share_with">Share with…</string>
  <string name="block_canary_yes">Yes</string>
  <string name="btn_close_flashlight_text">关闭手电筒</string>
  <string name="btn_open_flashlight_text">打开手电筒</string>
  <string name="btn_scan_local_pic">从相册选取二维码</string>
  <string name="button_retry">重试</string>
  <string name="buy_now">立即抢购</string>
  <string name="camera_open_failed">打开相机失败，请前往设置-&gt;应用程序-&gt;权限设置，打开相机权限</string>
  <string name="can_not_reply_lock_post">不能回复锁定的帖子</string>
  <string name="cancel">取消</string>
  <string name="cancel_refresh">取消刷新</string>
  <string name="capture_qr_bar_code">扫描条形码</string>
  <string name="capture_qr_bar_code_tips">将绘本条形码放入框内</string>
  <string name="capture_qr_code">扫描二维码</string>
  <string name="capture_qr_code_tips">如何下载叽里呱啦TV版</string>
  <string name="change_environment">切换环境到_%s_</string>
  <string name="change_picture">更换照片</string>
  <string name="change_pwd">密码</string>
  <string name="check_record_try">请检测设备录音相关设置后重试</string>
  <string name="children_lock_tips">童锁</string>
  <string name="choose_more">选择更多金额</string>
  <string name="choose_recharge_bundle">请选择充值金额：</string>
  <string name="class_age_prefix">年龄：</string>
  <string name="class_member_prefix">人数：</string>
  <string name="class_owner_prefix">班长：</string>
  <string name="click_course">点击课程体验一下吧</string>
  <string name="click_to_listener">点击试听自己的绘本作品</string>
  <string name="click_to_record">点击录音</string>
  <string name="clocking_record_mobile_hint">绑定手机号，领取珍贵的礼物</string>
  <string name="collect_article_txt">快去告诉大家，让更多父母与你一起成长！</string>
  <string name="collect_success">收藏成功</string>
  <string name="collect_video_notify_txt">快告诉大家，让更多宝贝看到这部短片！</string>
  <string name="color_picker_button_black">Black</string>
  <string name="color_picker_button_blue">Blue</string>
  <string name="color_picker_button_cancel">Cancel</string>
  <string name="color_picker_button_cyan">Cyan</string>
  <string name="color_picker_button_green">Green</string>
  <string name="color_picker_button_magenta">Magenta</string>
  <string name="color_picker_button_more">More</string>
  <string name="color_picker_button_red">Red</string>
  <string name="color_picker_button_set">Set</string>
  <string name="color_picker_button_white">White</string>
  <string name="color_picker_button_yellow">Yellow</string>
  <string name="color_picker_dialog_title">Select color</string>
  <string name="color_picker_hue">Hue</string>
  <string name="color_picker_saturation">Saturation</string>
  <string name="color_picker_value">Value</string>
  <string name="com.crashlytics.android.build_id">ab5b0c82-11aa-4166-b7b6-cdfd169b083d</string>
  <string name="complete">完成</string>
  <string name="complete_course_txt">恭喜你完成了，赶紧分享给朋友吧</string>
  <string name="confirm">确认</string>
  <string name="confirm_modify">确认修改</string>
  <string name="confirm_pay">确认支付</string>
  <string name="confirm_tips">确定发布</string>
  <string name="connect_to_tv">请选择连接到电视的方式</string>
  <string name="delete_picture">删除照片</string>
  <string name="load_end">没有更多数据</string>
  <string name="load_failed">加载失败，请点我重试</string>
  <string name="loading">正在加载...</string>
  <string name="modify_baby_info">修改信息</string>
  <string name="name_your_baby">取英文名</string>
  <string name="password">账号密码</string>
  <string name="phone_info_completion_hint">请输入新手机号码</string>
  <string name="phone_info_subtitle">让宝贝的学习记录不会丢失~</string>
  <string name="select_from_album">从相册选择</string>
  <string name="set_as_current_baby">设为当前宝宝</string>
  <string name="share_course">分享课程</string>
  <string name="share_course_report">分享课程报告</string>
  <string name="skip_course_cancel">我要尝试</string>
  <string name="skip_sub_course">跳过课程</string>
  <string name="skip_sub_course_info">您的设备进行该部分内容可能体验不顺畅</string>
  <string name="take_photo">拍照</string>
  <string name="term_action">用户使用协议</string>
  <string name="term_desc">点击完成代表您同意叽里呱啦</string>
  <string name="verify_code_hint">输入验证码</string>
  <string name="verify_code_new_pwd_confirm">再次确认密码</string>
  <string name="verify_code_not_received">收不到验证码?</string>
  <string name="verify_code_subtitle">已发送验证码到 %1$s</string>
</resources>