<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@android:color/white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:float="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="center" android:id="@id/subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/verify_code_subtitle" />
        <com.wrapp.floatlabelededittext.FloatLabeledEditText android:layout_width="fill_parent" android:layout_height="wrap_content" float:fletPaddingLeft="@dimen/form_input_padding_left">
            <EditText android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:textColorHint="@color/color_default_gray" android:id="@id/verify_code_input" android:background="@drawable/edittext_bg_style" android:layout_width="fill_parent" android:layout_height="@dimen/default_row_height" android:hint="@string/verify_code_hint" android:singleLine="true" android:maxLength="4" android:drawableLeft="@drawable/icon_code_selector" android:inputType="number" android:textCursorDrawable="@null" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText android:layout_width="fill_parent" android:layout_height="wrap_content" float:fletPaddingLeft="@dimen/form_input_padding_left">
            <EditText android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:textColorHint="@color/color_default_gray" android:id="@id/pwd__et" android:background="@drawable/edittext_bg_style" android:paddingLeft="0.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/default_row_height" android:hint="@string/password" android:singleLine="true" android:maxLength="20" android:drawableLeft="@drawable/icon_pwd_selector" android:inputType="textPassword" android:textCursorDrawable="@null" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText android:layout_width="fill_parent" android:layout_height="wrap_content" float:fletPaddingLeft="@dimen/form_input_padding_left">
            <EditText android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:textColorHint="@color/color_default_gray" android:id="@id/pwd_confirm_et" android:background="@drawable/edittext_bg_style" android:paddingLeft="0.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/default_row_height" android:hint="@string/verify_code_new_pwd_confirm" android:singleLine="true" android:maxLength="20" android:drawableLeft="@drawable/icon_pwd_selector" android:inputType="textPassword" android:textCursorDrawable="@null" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <TextView android:enabled="false" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/confirm_btn" android:background="@drawable/btn_green_selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:text="@string/complete" />
        <TextView android:textSize="@dimen/content_small_size" android:textColor="@color/material_blue_grey_800" android:layout_gravity="center" android:id="@id/verification_code_received_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/verify_code_not_received" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/term_group" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip">
            <TextView android:textSize="@dimen/content_small_size" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/term_desc" />
            <TextView android:textSize="@dimen/content_small_size" android:textColor="@color/color_default_gray" android:gravity="center" android:layout_gravity="center" android:id="@id/term_btn" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/term_action" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>