<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@android:color/white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:float="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="center" android:id="@id/subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/phone_info_subtitle" />
        <com.wrapp.floatlabelededittext.FloatLabeledEditText android:layout_width="fill_parent" android:layout_height="wrap_content" float:fletPaddingLeft="@dimen/form_input_padding_left">
            <EditText android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:textColorHint="@color/color_default_gray" android:id="@id/phone_input" android:background="@drawable/edittext_bg_style" android:layout_width="fill_parent" android:layout_height="@dimen/default_row_height" android:hint="@string/phone_info_completion_hint" android:singleLine="true" android:maxLength="11" android:drawableLeft="@drawable/icon_phone_selector" android:inputType="phone" android:textCursorDrawable="@null" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <TextView android:enabled="false" android:textSize="@dimen/content_large_size" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/confirm_btn" android:background="@drawable/btn_green_selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:text="@string/confirm" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/term_group" android:layout_width="fill_parent" android:layout_height="40.0dip">
            <TextView android:textSize="@dimen/content_normal_size_smaller" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/term_desc" />
            <TextView android:textSize="@dimen/content_normal_size_smaller" android:textColor="@color/default_green_btn_text_color" android:gravity="center" android:layout_gravity="center" android:id="@id/term_btn" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/term_action" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>