<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/parent" android:background="#fff6f6f6" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="#ff313131" android:gravity="center_vertical" android:id="@id/tv_status" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" />
    <TextView android:textColor="#ff313131" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/adhoc_tester_tips_1" />
    <TextView android:textSize="14.0sp" android:textColor="@color/stand_red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/adhoc_tester_tips_2" />
    <Button android:textColor="@android:color/white" android:gravity="center|left" android:id="@id/btn_editor" android:background="@drawable/button_selector" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/adhoc_tester_editor_in" />
    <Button android:textColor="@android:color/white" android:gravity="center|left" android:id="@id/btn_scan" android:background="@drawable/button_selector" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="16.0dip" android:text="@string/adhoc_tester_scanner" />
    <Button android:textColor="@android:color/white" android:gravity="center|left" android:id="@id/btn_quit_experiment" android:background="@drawable/button_selector" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="16.0dip" android:text="@string/adhoc_tester_exit_experiment" />
    <Button android:textColor="@android:color/white" android:gravity="center|left" android:id="@id/btn_version" android:background="@drawable/button_selector" android:paddingLeft="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="16.0dip" android:text="当前版本为测试版本,点击切换版本" />
    <TextView android:id="@id/tv_scan_result" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" />
</LinearLayout>