<?xml version="1.0" encoding="utf-8"?>
<FrameLayout n1:layout_width="fill_parent" n1:layout_height="@dimen/dp_40"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:gravity="center" n1:orientation="horizontal" n1:id="@id/load_more_loading_view" n1:layout_width="fill_parent" n1:layout_height="fill_parent">
        <ProgressBar n1:id="@id/loading_progress" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginRight="@dimen/dp_4" style="?android:progressBarStyleSmall" />
        <TextView n1:textSize="@dimen/sp_14" n1:textColor="@android:color/black" n1:id="@id/loading_text" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="@dimen/dp_4" n1:text="@string/loading" />
    </LinearLayout>
    <FrameLayout n1:id="@id/load_more_load_fail_view" n1:visibility="gone" n1:layout_width="fill_parent" n1:layout_height="fill_parent">
        <TextView n1:layout_gravity="center" n1:id="@id/tv_prompt" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/load_failed" />
    </FrameLayout>
    <FrameLayout n1:id="@id/load_more_load_end_view" n1:visibility="gone" n1:layout_width="fill_parent" n1:layout_height="fill_parent">
        <TextView n1:textColor="@android:color/darker_gray" n1:layout_gravity="center" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/load_end" />
    </FrameLayout>
</FrameLayout>