<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/default_back_ground_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/action_back" android:background="@drawable/nav_icon_back" android:layout_width="@dimen/bar_button_height" android:layout_height="@dimen/bar_button_width" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="@dimen/content_large_size" android:textColor="@color/my_forum_tab_text_color" android:gravity="center" android:id="@id/my_post" android:background="@drawable/forum_tab_bg" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/top_bar_height" android:text="@string/action_bar_title_my_forum_post" android:layout_centerInParent="true" style="@style/FontMediumStyle" />
        <TextView android:textSize="@dimen/content_large_size" android:textColor="@color/my_forum_tab_text_color" android:gravity="center" android:id="@id/my_reply" android:background="@drawable/forum_tab_bg" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/top_bar_height" android:text="@string/action_bar_title_my_forum_reply" android:layout_centerInParent="true" style="@style/FontMediumStyle" />
        <TextView android:textSize="@dimen/content_large_size" android:textColor="@color/my_forum_tab_text_color" android:gravity="center" android:id="@id/my_sel" android:background="@drawable/forum_tab_bg" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/top_bar_height" android:text="@string/action_bar_title_my_forum_sel" android:layout_centerInParent="true" style="@style/FontMediumStyle" />
        <TextView android:textSize="@dimen/content_large_size" android:textColor="@color/my_forum_tab_text_color" android:gravity="center" android:id="@id/my_fav" android:background="@drawable/forum_tab_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/top_bar_height" android:text="@string/action_bar_title_my_forum_fav" android:layout_centerInParent="true" style="@style/FontMediumStyle" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="@color/color_detail_title" android:id="@id/action_post" android:padding="3.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_post" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <ImageView android:background="@color/nav_line_grey" android:layout_width="fill_parent" android:layout_height="@dimen/nav_line_height" android:layout_alignParentBottom="true" />
</RelativeLayout>