<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/round_corner_white_bg" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:id="@id/take_photo" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/take_photo" />
    <ImageView android:background="@drawable/line_lightgrey" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <Button android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:id="@id/album_choose_photo" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/select_from_album" />
    <ImageView android:background="@drawable/line_lightgrey" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <Button android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:id="@id/cancel" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/cancel" />
</LinearLayout>