<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/round_corner_white_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/content_normal_size_smaller" android:textColor="@color/color_default_gray" android:id="@id/baby_name" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <ImageView android:background="@drawable/line_lightgrey" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:gravity="center" android:id="@id/name_for_baby" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/name_your_baby" />
    <ImageView android:background="@drawable/line_lightgrey" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:gravity="center" android:id="@id/modify_baby" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/modify_baby_info" />
    <ImageView android:background="@drawable/line_lightgrey" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:gravity="center" android:id="@id/set_as_current_baby" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/set_as_current_baby" />
    <ImageView android:id="@id/divider_3" android:background="@drawable/line_lightgrey" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:gravity="center" android:id="@id/cancel" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" />
</LinearLayout>