<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/container" android:background="@drawable/round_corner_white_bg" android:padding="15.0dip" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_dark_gray" android:layout_gravity="center_horizontal" android:id="@id/skip_infos" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" android:text="@string/skip_sub_course_info" />
    <Button android:textSize="@dimen/content_large_size" android:textColor="@color/color_default_gray" android:id="@id/skip_cancel_btn" android:background="@null" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/default_row_height" android:text="@string/skip_course_cancel" android:layout_below="@id/skip_infos" />
    <ImageView android:background="@color/divider_grey_line" android:layout_width="fill_parent" android:layout_height="@dimen/divider_line_height" android:layout_alignBottom="@id/skip_infos" />
    <Button android:textSize="@dimen/content_large_size" android:textColor="@color/color_default_green" android:id="@id/skip_btn" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/default_row_height" android:text="@string/skip_sub_course" android:layout_below="@id/skip_cancel_btn" />
</LinearLayout>