<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/round_corner_gray_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip">
        <TextView android:textSize="@dimen/content_normal_size" android:textColor="@color/color_green" android:gravity="center" android:id="@id/share_course_report" android:layout_width="fill_parent" android:layout_height="@dimen/default_row_height" android:text="@string/share_course_report" />
        <View android:background="@color/divider_grey_line" android:layout_width="fill_parent" android:layout_height="@dimen/divider_line_height" />
        <TextView android:textSize="@dimen/content_normal_size" android:textColor="@color/color_green" android:gravity="center" android:id="@id/share_course" android:layout_width="fill_parent" android:layout_height="@dimen/default_row_height" android:text="@string/share_course" />
    </LinearLayout>
    <TextView android:textSize="@dimen/content_normal_size" android:textColor="@color/color_default_gray" android:gravity="center" android:id="@id/share_cancel" android:background="@drawable/round_corner_menu_option_bg_selector" android:layout_width="fill_parent" android:layout_height="@dimen/default_row_height" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/cancel" />
</LinearLayout>